[package]
name = "dfs_usage_audit"
version = "0.2.0"
edition = "2021"
rust-version = "1.75.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
filetime = "0.2.23"
jwalk = "0.8.1"
rayon = "1.10.0"
rust_xlsxwriter = "0.64.1"
